@@ -1074,11 +1074,11 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|Explanation
+name|ComplexExplanation
 name|result
 init|=
 operator|new
-name|Explanation
+name|ComplexExplanation
 argument_list|()
 decl_stmt|;
 name|result
@@ -1553,18 +1553,16 @@ name|getValue
 argument_list|()
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|queryExpl
+name|result
 operator|.
-name|getValue
+name|setMatch
+argument_list|(
+name|tfExplanation
+operator|.
+name|isMatch
 argument_list|()
-operator|==
-literal|1.0f
-condition|)
-return|return
-name|fieldExpl
-return|;
+argument_list|)
+expr_stmt|;
 return|return
 name|result
 return|;
