@@ -269,6 +269,7 @@ name|KEY
 init|=
 literal|"KEY"
 decl_stmt|;
+comment|// boost on this field is the same as the iterator for the doc
 DECL|field|FIELD
 specifier|public
 specifier|static
@@ -277,6 +278,16 @@ name|String
 name|FIELD
 init|=
 literal|"field"
+decl_stmt|;
+comment|// same contents, but no field boost
+DECL|field|ALTFIELD
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|ALTFIELD
+init|=
+literal|"alt"
 decl_stmt|;
 DECL|field|qp
 specifier|public
@@ -424,13 +435,52 @@ name|NOT_ANALYZED
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|Field
+name|f
+init|=
+name|newField
+argument_list|(
+name|FIELD
+argument_list|,
+name|docFields
+index|[
+name|i
+index|]
+argument_list|,
+name|Field
+operator|.
+name|Store
+operator|.
+name|NO
+argument_list|,
+name|Field
+operator|.
+name|Index
+operator|.
+name|ANALYZED
+argument_list|)
+decl_stmt|;
+name|f
+operator|.
+name|setBoost
+argument_list|(
+name|i
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|f
+argument_list|)
+expr_stmt|;
 name|doc
 operator|.
 name|add
 argument_list|(
 name|newField
 argument_list|(
-name|FIELD
+name|ALTFIELD
 argument_list|,
 name|docFields
 index|[
