@@ -2353,6 +2353,431 @@ block|}
 argument_list|)
 expr_stmt|;
 block|}
+comment|/* BQ of TQ: using alt so some fields have zero boost and some don't */
+DECL|method|testMultiFieldBQ1
+specifier|public
+name|void
+name|testMultiFieldBQ1
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"+w1 +alt:w2"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|,
+literal|1
+block|,
+literal|2
+block|,
+literal|3
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQ2
+specifier|public
+name|void
+name|testMultiFieldBQ2
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"+yy +alt:w3"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|2
+block|,
+literal|3
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQ3
+specifier|public
+name|void
+name|testMultiFieldBQ3
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"yy +alt:w3"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|,
+literal|1
+block|,
+literal|2
+block|,
+literal|3
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQ4
+specifier|public
+name|void
+name|testMultiFieldBQ4
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"w1 (-xx alt:w2)"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|,
+literal|1
+block|,
+literal|2
+block|,
+literal|3
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQ5
+specifier|public
+name|void
+name|testMultiFieldBQ5
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"w1 (+alt:qq alt:w2)"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|,
+literal|1
+block|,
+literal|2
+block|,
+literal|3
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQ6
+specifier|public
+name|void
+name|testMultiFieldBQ6
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"w1 -(-alt:qq alt:w5)"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|1
+block|,
+literal|2
+block|,
+literal|3
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQ7
+specifier|public
+name|void
+name|testMultiFieldBQ7
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"+w1 +(alt:qq (alt:xx -alt:w2) (+alt:w3 +alt:w4))"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQ8
+specifier|public
+name|void
+name|testMultiFieldBQ8
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"+alt:w1 (qq (alt:xx -w2) (+alt:w3 +w4))"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|,
+literal|1
+block|,
+literal|2
+block|,
+literal|3
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQ9
+specifier|public
+name|void
+name|testMultiFieldBQ9
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"+w1 (alt:qq (-xx w2) -(+alt:w3 +w4))"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|,
+literal|1
+block|,
+literal|2
+block|,
+literal|3
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQ10
+specifier|public
+name|void
+name|testMultiFieldBQ10
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"+w1 +(alt:qq (-xx alt:w2) -(+alt:w3 +w4))"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|1
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+comment|/* BQ of PQ: using alt so some fields have zero boost and some don't */
+DECL|method|testMultiFieldBQofPQ1
+specifier|public
+name|void
+name|testMultiFieldBQofPQ1
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"\"w1 w2\" alt:\"w1 w2\""
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQofPQ2
+specifier|public
+name|void
+name|testMultiFieldBQofPQ2
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"\"w1 w3\" alt:\"w1 w3\""
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|1
+block|,
+literal|3
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQofPQ3
+specifier|public
+name|void
+name|testMultiFieldBQofPQ3
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"\"w1 w2\"~1 alt:\"w1 w2\"~1"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|,
+literal|1
+block|,
+literal|2
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQofPQ4
+specifier|public
+name|void
+name|testMultiFieldBQofPQ4
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"\"w2 w3\"~1 alt:\"w2 w3\"~1"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|,
+literal|1
+block|,
+literal|2
+block|,
+literal|3
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQofPQ5
+specifier|public
+name|void
+name|testMultiFieldBQofPQ5
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"\"w3 w2\"~1 alt:\"w3 w2\"~1"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|1
+block|,
+literal|3
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQofPQ6
+specifier|public
+name|void
+name|testMultiFieldBQofPQ6
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"\"w3 w2\"~2 alt:\"w3 w2\"~2"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|,
+literal|1
+block|,
+literal|3
+block|}
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testMultiFieldBQofPQ7
+specifier|public
+name|void
+name|testMultiFieldBQofPQ7
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|qtest
+argument_list|(
+literal|"\"w3 w2\"~3 alt:\"w3 w2\"~3"
+argument_list|,
+operator|new
+name|int
+index|[]
+block|{
+literal|0
+block|,
+literal|1
+block|,
+literal|2
+block|,
+literal|3
+block|}
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 end_unit
